--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -2,15 +2,23 @@
 #player-one, #player-two {
 	width: 100px;
 	height: 100px;
-	margin: 0 30px;
+	/*margin: 5 30px;*/
 	padding: 25px 5px;
 	text-align: center;
 	border: 2px solid #bbbbdd;
 	border-radius: 3px;
 }
 
-#player-one {float: left;}
-#player-two {float: right;}
+#playerone-wrapper {
+	float: left;
+	margin: 0 30px;
+	border: 1px solid red;
+}
+#playertwo-wrapper {
+	float: right;
+	margin: 0 30px;
+	border: 1px solid red;
+}
 
 #playerone-menu, #playertwo-menu {
 	width: 100px;
